feat: Phase 5 배포 환경 설정 (Vercel + Railway)
Backend:
- application-prod.yml 추가 (PostgreSQL, CORS 환경변수)
- CorsConfig 환경변수 처리 추가
- Railway 배포 설정 (Procfile, nixpacks.toml, system.properties)
- .env.example 추가

Frontend:
- API URL 환경변수 처리 (NEXT_PUBLIC_API_URL)

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>